# Agent-E

./: .env-example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  agents_llm_config-example.json  install.sh  nested_chat_log_1718108527260686700.json  nested_chat_log_1718108559837544000.json  nested_chat_log_1718108706934467700.json  nested_chat_log_1718108723887467100.json  nested_chat_log_1718108853041032500.json  nested_chat_log_1718108873928391400.json  nested_chat_log_1718109017884698900.json  nested_chat_log_1718109040612466100.json  nested_chat_log_1718109752034678500.json  nested_chat_log_1718109928937720400.json  nested_chat_log_1718110052541096000.json  nested_chat_log_1718110076603286500.json  nested_chat_log_1718110095035811800.json  pyproject.toml  requirements.txt  run.sh  win_install.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_query.md
ae/: __init__.py  config.py  main.py  main_no_skills_nav.py
ae/core/: __init__.py  agents_llm_config.py  autogen_wrapper.py  notification_manager.py  playwright_manager.py  post_process_responses.py  prompts.py  system_orchestrator.py  ui_manager.py
ae/server/: api_routes.py
agent_optimizer/: available_skills_docs.txt  available_skills_imports.txt  chat_log_analyzer.py  run_optimizer.py  skill_harvestor.py  skill_qualifier.py
docs/: conf.py  index.rst
scripts/: aggregate_test_results.py  webvoyager_to_agente_test_converter.py
test/: combine.py  evaluators.py  run_tests.py  test_config_auditor.py  test_tasks_formatter.py  test_utils.py  tests_processor.py
(+94 files in other folders)
